# cookiecutter-fastapi

./: cookiecutter.json
docs/: console_script_setup.rst  prompts.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  Dockerfile  Makefile  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
